# optimum-p2p-client-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  PORTING_GUIDELINE.md  PORTING_QUICK_REFERENCE.md  README.md
include/optimum_p2p/: client.hpp  multi_client.hpp  proxy_client.hpp  types.hpp  utils.hpp
proto/: CMakeLists.txt  p2p_stream.proto  proxy_stream.proto
src/: client.cpp  multi_client.cpp  proxy_client.cpp  utils.cpp
tests/: CMakeLists.txt
tests/comparison/: CMakeLists.txt  test_go_vs_cpp.cpp
tests/e2e/: CMakeLists.txt  test_full_workflow.cpp
tests/fixtures/: test_ips.txt  test_messages.json  test_scenarios.json
tests/integration/: CMakeLists.txt  test_multi_client.cpp  test_proxy_client.cpp  test_single_client.cpp
tests/unit/: CMakeLists.txt  test_utils.cpp  test_utils_hex.cpp
